clusters/apps/base/network-system/nginx-ingress/external/temp-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cjs-server
  namespace: network-system
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cjs-server
  namespace: network-system
subsets:
  - addresses:
      - ip: 192.168.128.82
    ports:
      - name: https
        port: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: cjs-server
 namespace: network-system
 annotations:
   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: external
  tls:
  - hosts:
    - bitwarden.randomgamers.gg
    secretName: cj-wildcard-certificate
  rules:
  - host: bitwarden.randomgamers.gg
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cjs-server
            port:
              number: 443
